# asom-data-template

./: .env.example  .gitignore  DEVELOPER.md  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl
.github/: pull_request_template.md
config/: dev.yaml  local-sqlite.yaml  local.yaml  prod.yaml  settings.py  test.yaml
docs/: architecture.md  itoh-runbook.md
scripts/: gate_check.py  generate_fixtures.py  seed_local_db.py
sql/ddl/: dim_customer.sql  dim_service.sql  fact_customer_cost.sql  fact_daily_cost.sql
sql/dml/: load_fact_customer_cost.sql  load_fact_daily_cost.sql  merge_dim_service.sql
src/: connector.py
src/extract/: cur_loader.py
src/load/: dim_customer_loader.py  dim_service_loader.py  fact_customer_cost_loader.py  fact_daily_cost_loader.py
src/transform/: cur_analytics.py  cur_transformer.py  maskers.py
src/utils/: logging.py
tests/: conftest.py
tests/fixtures/: sample_cur.parquet  sample_customers.parquet  sample_customers_v1.parquet  sample_customers_v2.parquet
tests/integration/: test_connector.py
tests/unit/: test_cur_analytics.py  test_cur_loader.py  test_cur_transformer.py  test_dim_customer.py  test_dim_service.py  test_fact_customer_cost.py  test_fact_daily_cost.py  test_fixtures_scd.py  test_maskers.py
